# qt-wasm-template

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: pages.yml
